# athena-assignment

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.yml  exp_001.yml  exp_002.yml  exp_003.yml  exp_004.yml  exp_005.yml  exp_test.yml
data/experiment/exp_001/: test_h1.parquet  test_h2.parquet
data/experiment/exp_002/: predictions_light_gbm_h1.parquet  predictions_light_gbm_h2.parquet  test_h2.parquet
data/experiment/exp_003/: predictions_light_gbm_h1.parquet  predictions_light_gbm_h2.parquet  test_h1.parquet  test_h2.parquet
data/experiment/exp_004/: test_h1.parquet
data/experiment/exp_005/: predictions_tft_h1.parquet  test_h1.parquet
data/experiment/exp_test/: predictions_light_gbm_h1.parquet  predictions_light_gbm_h2.parquet  test_h1.parquet  test_h2.parquet
data/raw/: scaler_OT.pkl  scaler_stl_OT_seasonal_2160.pkl  scaler_stl_OT_seasonal_24.pkl  scaler_stl_OT_seasonal_504.pkl  scaler_stl_OT_seasonal_72.pkl  scaler_stl_OT_seasonal_720.pkl  scaler_stl_OT_trend.pkl
docs/: experimen-management.md  feature_ett.md  idea_did.md  idea_preprocess.md  model-selection.md  task_step.md
notebooks/: eda.ipynb  exp_001.ipynb  exp_002.ipynb  exp_004.ipynb  exp_005.ipynb
reports/eda/: etth1_raw.md  etth2_raw.md  ettm1_raw.md  ettm2_raw.md
reports/exp_001/: report_h1.md  report_h2.md
reports/exp_002/: report_h1.md  report_h2.md
reports/exp_003/: report_h1.md  report_h2.md
reports/exp_005/: report_h1.md
reports/exp_test/: report_h1.md  report_h2.md
scripts/: entry_point.py  test_gpu.py
src/athena_analyze/data/: processor.py
src/athena_analyze/eda/: analyzer.py  reporter.py  visualize.py
src/athena_analyze/models/: base.py  light_gbm.py  model.py  sarima.py  tft.py
src/utils/: array_backend.py  config.py  data_io.py  logging.py  plotter.py
