[project]
name = "athena-assignment"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.4,<2.1.0",
    "pandas>=2.2.2",
    "scikit-learn",
    "matplotlib",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "ipython>=9.9.0",
    "python-dotenv",
    "statsmodels>=0.14.6",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "pyarrow>=15.0.0",
    "pydantic>=2.12.5",
    "pmdarima>=2.1.1",
    "lightgbm>=4.6.0",
    "optuna>=4.7.0",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision==0.17.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision>=0.15.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchaudio==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchaudio>=2.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_analyze", "src/utils"]

[dependency-groups]
dev = ["pytest", "ruff"]

# --- PyTorch GPU環境向けの専用ソース設定 ---
# デフォルトはPyPI（CPU版）を使用
# GPU版が必要な場合: uv sync --extra gpu --index pytorch-cu124

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
